feat: fazendo o down grade dos projetos dominio e console de .net 6 para .net 5. E separando a camada de dominio com a camada de apresentação.

--- a/Compilador.WebApp/Compilador.WebApp.csproj
+++ b/Compilador.WebApp/Compilador.WebApp.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\AnaliseLexica\" />
+    <ProjectReference Include="..\Compilador.Dominio\Compilador.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
